# data-structures-1

c/u1/src/libs/: ArrayQueue.h  DoublyLinkedList.h  LinkedStack.h
c/u1/tests/: testLinkedStack.cpp
c/u3/src/: BST.h
c/u3/tests/: testAVL.cpp
golang/u1-golang/: verificaStringParenteses.go
golang/u1-golang/exercises/: inverteLinkedList.go
golang/u1-golang/lists/: arraylist.go  doublylinkedlist.go
golang/u1-golang/queues/linkedqueue/: linkedqueue_test.go
golang/u2-golang/: go.mod  main.go
golang/u2-golang/sorting/: bubbleSort.go  insertionSort.go  mergeSort.go  selectionSort.go
references/: material.txt
u1-golang/: go.mod
u1-golang/exercises/: inverteLinkedList.go
u1-golang/lists/: linkedlist.go
u1-golang/lists/arraylist/: arraylist.go
u1-golang/lists/doublylinkedlist/: doublylinkedlist_test.go
u1/src/: HelloWorld  HelloWorld.cpp
u1/src/libs/: ArrayList.h  LinkedList.h
u1/src/libs/prova/: testU1.h
u1/tests/: CMakeLists.txt  testArrayList.cpp  testArrayQueue.cpp  testDoublyLinkedList.cpp  testLinkedList.cpp  testU1.cpp
u3/src/: AVL.h
u3/tests/: CMakeLists.txt  testBST.cpp
